{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 8,
  "lineage": "2e22726a-27b3-db39-1748-c410428fd03f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wisecow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:905418293374:instance/i-070a0d70720361796",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070a0d70720361796",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04f0696687d7498cb"
              }
            ],
            "primary_network_interface_id": "eni-04f0696687d7498cb",
            "private_dns": "ip-10-0-1-98.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_ip": "65.2.34.82",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-087146e611f2778e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e34da52dfb8b5545",
            "tags": {
              "Name": "wisecow-k3s-server"
            },
            "tags_all": {
              "Name": "wisecow-k3s-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0baa74a96613fd382"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418293374",
            "id": "i-070a0d70720361796",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.wisecow_sg",
            "aws_subnet.wisecow_subnet",
            "aws_vpc.wisecow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wisecow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418293374:internet-gateway/igw-0c1a115410d9fc40b",
            "id": "igw-0c1a115410d9fc40b",
            "owner_id": "905418293374",
            "region": "ap-south-1",
            "tags": {
              "Name": "wisecow-igw"
            },
            "tags_all": {
              "Name": "wisecow-igw"
            },
            "vpc_id": "vpc-0c57c7372648d986d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.wisecow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wisecow_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418293374:route-table/rtb-04649c4cae2615983",
            "id": "rtb-04649c4cae2615983",
            "owner_id": "905418293374",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1a115410d9fc40b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c57c7372648d986d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418293374",
            "id": "rtb-04649c4cae2615983",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.wisecow_igw",
            "aws_vpc.wisecow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wisecow_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0221fb59eae669369",
            "region": "ap-south-1",
            "route_table_id": "rtb-04649c4cae2615983",
            "subnet_id": "subnet-0e34da52dfb8b5545"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.wisecow_igw",
            "aws_route_table.wisecow_rt",
            "aws_subnet.wisecow_subnet",
            "aws_vpc.wisecow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wisecow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418293374:security-group/sg-0baa74a96613fd382",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baa74a96613fd382",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30499,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30499
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260313164324152700000001",
            "name_prefix": "terraform-",
            "owner_id": "905418293374",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c57c7372648d986d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418293374",
            "id": "sg-0baa74a96613fd382",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.wisecow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wisecow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418293374:subnet/subnet-0e34da52dfb8b5545",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e34da52dfb8b5545",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418293374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "wisecow-subnet"
            },
            "tags_all": {
              "Name": "wisecow-subnet"
            },
            "vpc_id": "vpc-0c57c7372648d986d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418293374",
            "id": "subnet-0e34da52dfb8b5545",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.wisecow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wisecow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418293374:vpc/vpc-0c57c7372648d986d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ee7226663f1e5c4",
            "default_route_table_id": "rtb-032e98abf86ec0882",
            "default_security_group_id": "sg-0a9d031417fd46929",
            "dhcp_options_id": "dopt-04489b2bc6bc9d1fa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c57c7372648d986d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032e98abf86ec0882",
            "owner_id": "905418293374",
            "region": "ap-south-1",
            "tags": {
              "Name": "wisecow-vpc"
            },
            "tags_all": {
              "Name": "wisecow-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418293374",
            "id": "vpc-0c57c7372648d986d",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}